# MeowSimulatorGTK

./: .gitignore  .gitmodules  Cargo.toml  Makefile  PKGBUILD  README.md  build.rs  com.wzium.MeowSimulator.desktop  installer.env  main.py  meow-simulator.desktop  package-windows.sh  requirements.txt  window.ui
.github/workflows/: main.yml
assets/: icon.qrc
installer-po/: gtkwininstaller.pot  pl.po
po/: meow-simulator.pot  pl.po
src/: main.rs
