[package]
name = "MeowSimulatorRust"
version = "1.0.4"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
rand = "0.8"
gstreamer = "0.23"
futures-util = "0.3"

libadwaita = { version = "0.7", features = ["v1_6"] }

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
winreg = "0.52"
windows = { version = "0.59", features = [
    "Win32_System_RestartManager",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winresource = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = "thin"
